# alex-blog

./: README.md  db.sqlite3  pyproject.toml
blog/: settings.py
posts/: admin.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20191205_1610.py
posts/static/posts/: style.css
posts/templates/posts/: base.html  detail.html  index.html
